# sklearn

./: CMakeLists.txt  README.md  RELEASE_NOTES.md  build.properties
doc/: CMakeLists.txt  Doxyfile.in
include/sklearn/datasets/: Diabetes.hpp  Iris.hpp  datasets.hpp
include/sklearn/linear_model/: LinearRegression.hpp  SGDRegressor.hpp
include/sklearn/metrics/: ChebyshevDistance.hpp  Distance.hpp  DistanceMetric.hpp  DistanceMetricType.hpp  EuclideanDistance.hpp  ManhattanDistance.hpp  Math.hpp  MinkowskiDistance.hpp  accuracy_score.hpp  confusion_matrix.hpp  f1_score.hpp  mean_absolute_error.hpp  mean_squared_error.hpp  r2_score.hpp
include/sklearn/model_selection/: train_test_split.hpp
include/sklearn/neighbors/: Algorithm.hpp  AlgorithmType.hpp  BallTree.hpp  KNeighborsClassifier.hpp  KdTree.hpp  WeightsType.hpp
include/sklearn/preprocessing/: StandardScaler.hpp
samples/gmt_trend_2d/: CMakeLists.txt  main.cpp
samples/neighbors/: CMakeLists.txt  main.cpp
samples/neighbors/diabetes/: CMakeLists.txt  main.cpp
samples/neighbors/iris/: CMakeLists.txt  main.cpp
scripts/: build.sh  deploy.sh
src/: CMakeLists.txt
src/datasets/: Diabetes.cpp  Iris.cpp  datasets.cpp
src/metrics/: accuracy_score.cpp  confusion_matrix.cpp  f1_score.cpp
src/model_selection/: train_test_split.cpp
src/preprocessing/: StandardScaler.cpp
unit_tests/: CMakeLists.txt
unit_tests/include/: SklearnTest.hpp
unit_tests/src/: AccuracyScoreTest.cpp  ConfusionMatrixTest.cpp  F1ScoreTest.cpp  KNeighborsClassifierTest.cpp  LinearRegressionTest.cpp  MeanAbsoluteErrorTest.cpp  MeanSquaredErrorTest.cpp  MetricsTest.cpp  R2ScoreTest.cpp  SGDRegressorTest.cpp  StandardScalerTest.cpp  TrainTestSplitTest.cpp  main.cpp
